--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     body { margin:0; overflow:hidden; background:#000; touch-action:none; }
     #info { position:absolute; top:20px; left:50%; transform:translateX(-50%); color:#fff; background:rgba(0,0,0,0.7); padding:12px 40px; border-radius:40px; font-size:18px; pointer-events:none; z-index:100; box-shadow:0 0 20px cyan; }
     #finalImage { position:fixed; inset:0; background:rgba(0,0,0,0.98); display:none; align-items:center; justify-content:center; z-index:998; }
-    #finalImage img { width:100vw; height:100vh; object-fit:contain; }
+    #finalImage img { max-width:100vw; max-height:100vh; object-fit:contain; }
     #gift { position:absolute; bottom:80px; left:50%; transform:translateX(-50%) scale(0); cursor:pointer; z-index:99; transition:transform 1s ease; width:220px; }
-ervis    #merry { position:fixed; inset:0; color:#ff0066; font-size:90px; font-weight:bold; display:flex; align-items:center; justify-content:center; flex-direction:column; opacity:0; pointer-events:none; z-index:999; text-shadow:0 0 60px red; transition:opacity 3s; }
+    #merry { position:fixed; inset:0; color:#ff0066; font-size:90px; font-weight:bold; display:flex; align-items:center; justify-content:center; flex-direction:column; opacity:0; pointer-events:none; z-index:999; text-shadow:0 0 60px red; transition:opacity 3s; }
     #merry span { font-size:60px; color:#0ff; margin-top:30px; text-shadow:0 0 40px cyan; }
   </style>
 </head>
@@ -28,28 +28,34 @@ ervis    #merry { position:fixed; inset:0; color:#ff0066; font-size:90px; font-w
     import * as THREE from 'three';
     import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 
-    const scene = new THREE.Scene(); scene.background = new THREE.Color(0x000814);
+    // --- CƠ BẢN ---
+    const scene = new THREE.Scene(); 
+    scene.background = new THREE.Color(0x000814);
+
     const camera = new THREE.PerspectiveCamera(50, innerWidth/innerHeight, 0.1, 2000);
     camera.position.z = 380;
-    const renderer = new THREE.WebGLRenderer({antialias:true}); 
-    renderer.setSize(innerWidth,innerHeight); 
+
+    const renderer = new THREE.WebGLRenderer({antialias:true});
+    renderer.setSize(innerWidth, innerHeight);
     renderer.setPixelRatio(devicePixelRatio);
     document.body.appendChild(renderer.domElement);
 
     const controls = new OrbitControls(camera, renderer.domElement);
-    controls.enableDamping = true; controls.enablePan = false;
+    controls.enableDamping = true; 
+    controls.enablePan = false;
 
-    const globe = new THREE.Group(); scene.add(globe);
+    const globe = new THREE.Group(); 
+    scene.add(globe);
 
-    // Kính bắt click
+    // Kính để bắt click
     const glass = new THREE.Mesh(
       new THREE.SphereGeometry(120,64,64),
       new THREE.MeshStandardMaterial({color:0xffffff, metalness:0.1, roughness:0, transparent:true, opacity:0.22})
     );
     globe.add(glass);
 
-    // Đế + ribbon + nhãn Christmas
-    const base = new THREE.Mesh(new THREE.CylinderGeometry(84,94,64,64), new THREE.MeshStandardMaterial({color:0x8b4513})); 
+    // Đế gỗ + ribbon + nhãn Christmas
+    const base = new THREE.Mesh(new THREE.CylinderGeometry(84,94,64,64), new THREE.MeshStandardMaterial({color:0x8b4513}));
     base.position.y = -150; globe.add(base);
 
     const ribbon = new THREE.Mesh(new THREE.RingGeometry(82,94,64), new THREE.MeshStandardMaterial({color:0xc41e3a, side:THREE.DoubleSide}));
@@ -57,7 +63,8 @@ ervis    #merry { position:fixed; inset:0; color:#ff0066; font-size:90px; font-w
 
     const canvas = document.createElement('canvas'); canvas.width=512; canvas.height=128;
     const ctx = canvas.getContext('2d');
-    const grad = ctx.createLinearGradient(0,0,512,128); grad.addColorStop(0,'#ffd700'); grad.addColorStop(1,'#b8860b');
+    const grad = ctx.createLinearGradient(0,0,512,128);
+    grad.addColorStop(0,'#ffd700'); grad.addColorStop(1,'#b8860b');
     ctx.fillStyle = grad; ctx.fillRect(0,0,512,128);
     ctx.strokeStyle = '#333'; ctx.lineWidth = 10; ctx.strokeRect(8,8,496,112);
     ctx.fillStyle = '#8b0000'; ctx.font = 'bold 80px Arial'; ctx.textAlign='center'; ctx.textBaseline='middle';
@@ -82,47 +89,46 @@ ervis    #merry { position:fixed; inset:0; color:#ff0066; font-size:90px; font-w
     // Người tuyết
     const snowman = new THREE.Group();
     snowman.add(new THREE.Mesh(new THREE.SphereGeometry(18), new THREE.MeshStandardMaterial({color:0xffffff})));
-    const mid = new THREE.Mesh(new THREE.SphereGeometry(14), new THREE.MeshStandardMaterial({color:0xffffff})); mid.position.y=25; snowman.add(mid);
-    const head = new THREE.Mesh(new THREE.SphereGeometry(10), new THREE.MeshStandardMaterial({color:0xffffff})); head.position.y=43; snowman.add(head);
-    const hat = new THREE.Mesh(new THREE.CylinderGeometry(9,11,22), new THREE.MeshStandardMaterial({color:0x000000})); hat.position.y=52; snowman.add(hat);
+    const mid = new THREE.Mesh(new THREE.SphereGeometry(14), new THREE.MeshStandardMaterial({color:0xffffff})); mid.position.y = 25; snowman.add(mid);
+    const head = new THREE.Mesh(new THREE.SphereGeometry(10), new THREE.MeshStandardMaterial({color:0xffffff})); head.position.y = 43; snowman.add(head);
+    const hat = new THREE.Mesh(new THREE.CylinderGeometry(9,11,22), new THREE.MeshStandardMaterial({color:0x000000})); hat.position.y = 52; snowman.add(hat);
     const scarf = new THREE.Mesh(new THREE.BoxGeometry(26,6,14), new THREE.MeshStandardMaterial({color:0xff0000})); scarf.position.set(0,34,11); snowman.add(scarf);
     snowman.position.set(40,-62,10); inside.add(snowman);
 
-    // 4 cây thông – ĐÃ SỬA LỖI Object3D.add
-    for(let i=0; i<4; i++){
+    // 4 cây thông – ĐÃ ĐẢM BẢO KHÔNG CÓ LỖI Object3D.add
+    for(let i = 0; i < 4; i++){
       const tree = new THREE.Group();
       const trunk = new THREE.Mesh(new THREE.CylinderGeometry(5,7,24), new THREE.MeshStandardMaterial({color:0x654321}));
       const leaves = new THREE.Mesh(new THREE.ConeGeometry(30,60,12), new THREE.MeshStandardMaterial({color:0x0f5132}));
       leaves.position.y = 42;
       tree.add(trunk);
-      tree.add(leaves);                     // ĐÃ SỬA CHỖ NÀY
+      tree.add(leaves);
       tree.position.set(-70 + i*50, -64, -40 - Math.random()*30);
       tree.scale.setScalar(0.6 + Math.random()*0.5);
       tree.rotation.y = Math.random() * Math.PI;
-      inside.add(tree);
+      inside.add(tree);           // ← Đúng chỗ này
     }
 
     // Tuyết rơi
     const snowCount = 7000;
     const snowGeo = new THREE.BufferGeometry();
     const posArray = new Float32Array(snowCount*3);
-    for(let i=0; i<snowCount*3; i+=3){
+    for(let i = 0; i < snowCount*3; i += 3){
       posArray[i]   = THREE.MathUtils.randFloatSpread(250);
       posArray[i+1] = 200 + Math.random()*100;
       posArray[i+2] = THREE.MathUtils.randFloatSpread(250);
     }
     snowGeo.setAttribute('position', new THREE.BufferAttribute(posArray,3));
-    const snow = new THREE.Points(snowGeo, new THREE.PointsMaterial({color:0xffffff, size:5.5, transparent:true, opacity:0.92, blending:THREE.AdditiveBlending}));
+    const snow = new THREE.Points(snowGeo, new THREE.PointsMaterial({color:0xffffff,size:5.5,transparent:true,opacity:0.92,blending:THREE.AdditiveBlending}));
     globe.add(snow);
 
     scene.add(new THREE.AmbientLight(0xffffff,0.8));
     scene.add(new THREE.DirectionalLight(0xffffff,1.5).position.set(120,250,100));
 
-    // ==================== HIỆU ỨNG ====================
-    let clickCount=0, spinSpeed=0, shake=0, isExploded=false, giftClicks=0;
+    // --- HIỆU ỨNG ---
+    let clickCount = 0, spinSpeed = 0, shake = 0, isExploded = false, giftClicks = 0;
     const countDisplay = document.getElementById('count');
     const fragments = [];
-
     const raycaster = new THREE.Raycaster();
     const mouse = new THREE.Vector2();
 
@@ -130,57 +136,86 @@ ervis    #merry { position:fixed; inset:0; color:#ff0066; font-size:90px; font-w
       if(isExploded) return;
       const x = e.touches ? e.touches[0].clientX : e.clientX;
       const y = e.touches ? e.touches[0].clientY : e.clientY;
-      mouse.x = (x/innerWidth)*2-1; mouse.y = -(y/innerHeight)*2+1;
+      mouse.x = (x/innerWidth)*2-1; 
+      mouse.y = -(y/innerHeight)*2+1;
       raycaster.setFromCamera(mouse,camera);
-      if(raycaster.intersectObject(glass).length>0){
-        shake=1; snow.material.size=9; setTimeout(()=>snow.material.size=5.5,800);
-        clickCount++; countDisplay.textContent=clickCount;
+      if(raycaster.intersectObject(glass).length > 0){
+        shake = 1; 
+        snow.material.size = 9; 
+        setTimeout(()=>snow.material.size=5.5,800);
+        clickCount++; 
+        countDisplay.textContent = clickCount;
         if(clickCount===3){
-          const accel = setInterval(()=>{ spinSpeed+=0.22; if(spinSpeed>4.5){ clearInterval(accel); explodeGlobe(); }},150);
+          const accel = setInterval(()=>{
+            spinSpeed += 0.22;
+            if(spinSpeed > 4.5){ clearInterval(accel); explodeGlobe(); }
+          },150);
         }
       }
     }
-    window.addEventListener('click',onPointer);
-    window.addEventListener('touchstart',onPointer);
+    window.addEventListener('click', onPointer);
+    window.addEventListener('touchstart', onPointer);
 
     function explodeGlobe(){
-      isExploded=true;
-      document.getElementById('info').style.opacity=0;
+      isExploded = true;
+      document.getElementById('info').style.opacity = 0;
 
-      for(let i=0;i<280;i++){
-        const s=6+Math.random()*18;
-        const f=new THREE.Mesh(new THREE.PlaneGeometry(s,s), new THREE.MeshPhysicalMaterial({color:0xffffff,metalness:0.95,roughness:0.05,transmission:0.98,thickness:5,transparent:true,opacity:0.9}));
+      // Mảnh kính vỡ
+      for(let i = 0; i < 280; i++){
+        const s = 6 + Math.random()*18;
+        const f = new THREE.Mesh(new THREE.PlaneGeometry(s,s), new THREE.MeshPhysicalMaterial({color:0xffffff,metalness:0.95,roughness:0.05,transmission:0.98,thickness:5,transparent:true,opacity:0.9}));
         f.position.copy(glass.position);
-        const dir=new THREE.Vector3(Math.random()-0.5,Math.random()-0.2,Math.random()-0.5).normalize().multiplyScalar(12+Math.random()*25);
-        f.userData={vel:dir, rot:new THREE.Vector3(Math.random()*40,Math.random()*40,Math.random()*40)};
-        scene.add(f); fragments.push(f);
+        const dir = new THREE.Vector3(Math.random()-0.5, Math.random()-0.2, Math.random()-0.5).normalize().multiplyScalar(12+Math.random()*25);
+        f.userData = {vel:dir, rot:new THREE.Vector3(Math.random()*40,Math.random()*40,Math.random()*40)};
+        scene.add(f); 
+        fragments.push(f);
       }
-      globe.visible=false;
+      globe.visible = false;
 
-      const pos=snow.geometry.attributes.position.array;
-      for(let i=1;i<pos.length;i+=3) pos[i]=180+Math.random()*150;
-      snow.geometry.attributes.position.needsUpdate=true;
+      // Reset tuyết
+      const pos = snow.geometry.attributes.position.array;
+      for(let i = 1; i < pos.length; i += 3) pos[i] = 180 + Math.random()*150;
+      snow.geometry.attributes.position.needsUpdate = true;
 
-      setTimeout(()=>{document.getElementById('finalImage').style.display='flex'; new Audio('music.mp3').play().catch(()=>{});},1800);
-      setTimeout(()=>{document.getElementById('gift').style.transform='translateX(-50%) scale(1)';},4000);
+      setTimeout(()=>{ 
+        document.getElementById('finalImage').style.display = 'flex'; 
+        new Audio('music.mp3').play().catch(()=>{}); 
+      },1800);
+      setTimeout(()=>{ 
+        document.getElementById('gift').style.transform = 'translateX(-50%) scale(1)'; 
+      },4000);
     }
 
     const giftBox = document.getElementById('gift');
-    giftBox.addEventListener('click',()=>{if(giftClicks<3){giftClicks++; giftBox.style.transform='translateX(-50%) scale(1.25)'; setTimeout(()=>'translateX(-50%) scale(1)',200); if(giftClicks===3) setTimeout(openGift,800);}});
-    giftBox.addEventListener('touchstart',giftBox.click);
+    giftBox.addEventListener('click', handleGift);
+    giftBox.addEventListener('touchstart', e=>{e.preventDefault(); handleGift(e);});
+
+    function handleGift(){
+      if(giftClicks < 3){
+        giftClicks++;
+        giftBox.style.transform = 'translateX(-50%) scale(1.25)';
+        setTimeout(()=>giftBox.style.transform='translateX(-50%) scale(1)',200);
+        if(giftClicks===3) setTimeout(openGift,800);
+      }
+    }
 
     function openGift(){
-      giftBox.style.opacity=0;
+      giftBox.style.opacity = 0;
       const santaTex = new THREE.TextureLoader().load('https://i.imgur.com/9b2Z9Zk.png');
-      const santa = new THREE.Mesh(new THREE.PlaneGeometry(120,160), new THREE.MeshBasicMaterial({map:santaTex,transparent:true}));
-      santa.position.set(0,-100,0); scene.add(santa);
+      const santa = new THREE.Mesh(new THREE.PlaneGeometry(120,160), new THREE.MeshBasicMaterial({map:santaTex, transparent:true}));
+      santa.position.set(0,-100,0);
+      scene.add(santa);
 
-      let z=0;
-      const fly=setInterval(()=>{
+      let z = 0;
+      const fly = setInterval(()=>{
         santa.position.y += 10;
         z -= 8; santa.position.z = z;
-        santa.scale.setScalar(santa.scale.x * 1.04);
-        if(z < -150){ clearInterval(fly); new Audio('music2.mp3').play().catch(()=>{}); setTimeout(()=>document.getElementById('merry').style.opacity=1,1000); }
+        santa.scale.multiplyScalar(1.04);
+        if(z < -150){
+          clearInterval(fly);
+          new Audio('music2.mp3').play().catch(()=>{});
+          setTimeout(()=>document.getElementById('merry').style.opacity=1,1000);
+        }
       },30);
     }
 
@@ -188,18 +223,18 @@ ervis    #merry { position:fixed; inset:0; color:#ff0066; font-size:90px; font-w
       requestAnimationFrame(animate);
       globe.rotation.y += 0.004 + spinSpeed;
 
-      if(shake>0.01){
+      if(shake > 0.01){
         globe.rotation.y += Math.sin(performance.now()*0.03)*0.05*shake;
         globe.rotation.x += Math.sin(performance.now()*0.022)*0.04*shake;
         shake *= 0.93;
       }
 
-      const pos=snow.geometry.attributes.position.array;
-      for(let i=1;i<pos.length;i+=3){
+      const pos = snow.geometry.attributes.position.array;
+      for(let i = 1; i < pos.length; i += 3){
         pos[i] -= 0.9 + spinSpeed*7 + shake*5;
         if(pos[i] < -200) pos[i] += 500;
       }
-      snow.geometry.attributes.position.needsUpdate=true;
+      snow.geometry.attributes.position.needsUpdate = true;
 
       if(isExploded){
         fragments.forEach(f=>{
@@ -209,7 +244,7 @@ ervis    #merry { position:fixed; inset:0; color:#ff0066; font-size:90px; font-w
           f.rotation.z += f.userData.rot.z*0.04;
           f.userData.vel.y -= 0.5;
           f.material.opacity *= 0.98;
-          if(f.material.opacity<0.02) scene.remove(f);
+          if(f.material.opacity < 0.02) scene.remove(f);
         });
       }
 
@@ -218,7 +253,11 @@ ervis    #merry { position:fixed; inset:0; color:#ff0066; font-size:90px; font-w
     }
     animate();
 
-    window.addEventListener('resize',()=>{camera.aspect=innerWidth/innerHeight; camera.updateProjectionMatrix(); renderer.setSize(innerWidth,innerHeight);});
+    window.addEventListener('resize',()=>{
+      camera.aspect = innerWidth/innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(innerWidth,innerHeight);
+    });
   </script>
 </body>
 </html>
